// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pack Snapshots Middle&Bottom 1`] = `
<ul
  className="sc-bdfBwQ hRCWAZ"
>
  <li
    className="sc-gsTCUz hoTGHm test"
  >
    Loan
  </li>
  <li
    className="sc-gsTCUz hoTGHm test"
  >
    Credit
  </li>
  <li
    className="sc-gsTCUz hoTGHm test"
  >
    Saving
  </li>
  <li
    className="sc-gsTCUz hoTGHm test"
  >
    About this bank
  </li>
</ul>
`;

exports[`Pack Snapshots No props 1`] = `
<ul
  className="sc-bdfBwQ hRCWAZ"
>
  <li
    className="sc-gsTCUz hoTGHm"
  >
    Loan
  </li>
  <li
    className="sc-gsTCUz hoTGHm"
  >
    Credit
  </li>
  <li
    className="sc-gsTCUz hoTGHm"
  >
    Saving
  </li>
  <li
    className="sc-gsTCUz hoTGHm"
  >
    About this bank
  </li>
</ul>
`;

exports[`Pack Snapshots bottom 1`] = `
<ul
  className="sc-bdfBwQ bMqWSE"
>
  <li
    className="sc-gsTCUz hoTGHm"
  >
    Loan
  </li>
  <li
    className="sc-gsTCUz hoTGHm"
  >
    Credit
  </li>
  <li
    className="sc-gsTCUz hoTGHm"
  >
    Saving
  </li>
  <li
    className="sc-gsTCUz hoTGHm"
  >
    About this bank
  </li>
</ul>
`;

exports[`Pack Snapshots className 1`] = `
<ul
  className="sc-bdfBwQ hRCWAZ className"
>
  <li
    className="sc-gsTCUz hoTGHm"
  >
    Loan
  </li>
  <li
    className="sc-gsTCUz hoTGHm"
  >
    Credit
  </li>
  <li
    className="sc-gsTCUz hoTGHm"
  >
    Saving
  </li>
  <li
    className="sc-gsTCUz hoTGHm"
  >
    About this bank
  </li>
</ul>
`;

exports[`Pack Snapshots justify 1`] = `
<ul
  className="sc-bdfBwQ ghrdEA"
>
  <li
    className="sc-gsTCUz hoTGHm test"
  >
    Loan
  </li>
  <li
    className="sc-gsTCUz hoTGHm test"
  >
    Credit
  </li>
  <li
    className="sc-gsTCUz hoTGHm test"
  >
    Saving
  </li>
  <li
    className="sc-gsTCUz hoTGHm test"
  >
    About this bank
  </li>
</ul>
`;

exports[`Pack Snapshots middle 1`] = `
<ul
  className="sc-bdfBwQ khvaIO"
>
  <li
    className="sc-gsTCUz hoTGHm"
  >
    Loan
  </li>
  <li
    className="sc-gsTCUz hoTGHm"
  >
    Credit
  </li>
  <li
    className="sc-gsTCUz hoTGHm"
  >
    Saving
  </li>
  <li
    className="sc-gsTCUz hoTGHm"
  >
    About this bank
  </li>
</ul>
`;

exports[`Pack Snapshots no Children 1`] = `
<ul
  className="sc-bdfBwQ hRCWAZ"
/>
`;

exports[`Pack Snapshots noWrap 1`] = `
<ul
  className="sc-bdfBwQ ZZokh"
>
  <li
    className="sc-gsTCUz hoTGHm"
  >
    Loan
  </li>
  <li
    className="sc-gsTCUz hoTGHm"
  >
    Credit
  </li>
  <li
    className="sc-gsTCUz hoTGHm"
  >
    Saving
  </li>
  <li
    className="sc-gsTCUz hoTGHm"
  >
    About this bank
  </li>
</ul>
`;
